--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,17 +7,36 @@
     min-height: 100px;
     max-height: 280px;
     padding: 0;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     position: relative;
     z-index: 0;
 }
 
+/* Placing the GIF on the header as an absolute object */
 #header-gif {
     min-height: 100px;
     max-height: 240px;
-
     position: absolute;
     top: 0;
     right: 40px;
     z-index: 1;
+}
+
+.navbar-item {
+    display: inline-block;
+    max-height: 40px;
+    padding: 20px 30px 0px 30px;
+    margin: 0 auto;
+    min-height: 36px;
+    font-family: 'Sunflower';
+    font-size: 14.75pt;
+}
+
+.navbar {
+    border-style: solid;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-right-width: 0;
+    border-left-width: 0;
+    border-color: rgb(197, 197, 197);
 }
