--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,30 @@
     border-left-width: 0;
     border-color: rgb(197, 197, 197);
 }
+
+.value-props, #button-container {
+    margin-top: 10px;
+    width: 960px;
+    min-width: 490px;
+}
+
+.gif {
+    margin: 10px 32px 10px 32px;
+    width: 160.19px;
+}
+
+#button-label-header {
+    margin: 0 auto;
+    font-family: 'Sunflower';
+    font-style: italic;
+    text-align: center;
+    font-weight: bolder;
+    padding: 18px;
+    border-style: solid;
+    border-top-width: 0;
+    border-bottom-width: 2px;
+    border-right-width: 0;
+    border-left-width: 0;
+    border-color: rgb(158, 158, 158);
+    max-width: 625px;
+}
