--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,4 +143,17 @@
         right: 0;
         z-index: 1;
     }
+    .button {
+        margin: 5px 10px 5px 10px;
+        width: 160.19px;
+    }
+    .navbar-item {
+        display: inline-block;
+        max-height: 40px;
+        padding: 5px 5px 0px 5px;
+        margin: 0 auto;
+        min-height: 36px;
+        font-family: 'Sunflower';
+        font-size: 14.75pt;
+    }
 }
